# app/core/api/profile/v1/profile_http.pb.go
@@ -18,13 +18,19 @@ var _ = new(context.Context)
 
 const _ = http.SupportPackageIsVersion3
 
+const OperationProfileServiceCompleteOnboarding = "/puchi.core.profile.v1.ProfileService/CompleteOnboarding"
+const OperationProfileServiceGetLinkedAccounts = "/puchi.core.profile.v1.ProfileService/GetLinkedAccounts"
 const OperationProfileServiceGetProfile = "/puchi.core.profile.v1.ProfileService/GetProfile"
+const OperationProfileServiceGetProfileByUsername = "/puchi.core.profile.v1.ProfileService/GetProfileByUsername"
 const OperationProfileServiceGetStats = "/puchi.core.profile.v1.ProfileService/GetStats"
 const OperationProfileServiceListAchievements = "/puchi.core.profile.v1.ProfileService/ListAchievements"
 const OperationProfileServiceUpdateProfile = "/puchi.core.profile.v1.ProfileService/UpdateProfile"
 
 type ProfileServiceHTTPServer interface {
+	CompleteOnboarding(context.Context, *CompleteOnboardingRequest) (*User, error)
+	GetLinkedAccounts(context.Context, *emptypb.Empty) (*LinkedAccountsResponse, error)
 	GetProfile(context.Context, *emptypb.Empty) (*User, error)
+	GetProfileByUsername(context.Context, *GetProfileByUsernameRequest) (*User, error)
 	GetStats(context.Context, *emptypb.Empty) (*Stats, error)
 	ListAchievements(context.Context, *emptypb.Empty) (*AchievementList, error)
 	UpdateProfile(context.Context, *UpdateProfileRequest) (*User, error)
@@ -36,6 +42,9 @@ func RegisterProfileServiceHTTPServer(s *http.Server, srv ProfileServiceHTTPServ
 	r.Handle("PUT", "/v1/profile", _ProfileService_UpdateProfile0_HTTP_Handler(srv))
 	r.Handle("GET", "/v1/profile/stats", _ProfileService_GetStats0_HTTP_Handler(srv))
 	r.Handle("GET", "/v1/profile/achievements", _ProfileService_ListAchievements0_HTTP_Handler(srv))
+	r.Handle("GET", "/v1/profile/{username}", _ProfileService_GetProfileByUsername0_HTTP_Handler(srv))
+	r.Handle("POST", "/v1/onboarding/complete", _ProfileService_CompleteOnboarding0_HTTP_Handler(srv))
+	r.Handle("GET", "/v1/profile/linked-accounts", _ProfileService_GetLinkedAccounts0_HTTP_Handler(srv))
 }
 
 func _ProfileService_GetProfile0_HTTP_Handler(srv ProfileServiceHTTPServer) func(ctx http.Context) error {
@@ -114,8 +123,71 @@ func _ProfileService_ListAchievements0_HTTP_Handler(srv ProfileServiceHTTPServer
 	}
 }
 
+func _ProfileService_GetProfileByUsername0_HTTP_Handler(srv ProfileServiceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in GetProfileByUsernameRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindVars(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationProfileServiceGetProfileByUsername)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.GetProfileByUsername(ctx, req.(*GetProfileByUsernameRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*User)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _ProfileService_CompleteOnboarding0_HTTP_Handler(srv ProfileServiceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in CompleteOnboardingRequest
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationProfileServiceCompleteOnboarding)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.CompleteOnboarding(ctx, req.(*CompleteOnboardingRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*User)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _ProfileService_GetLinkedAccounts0_HTTP_Handler(srv ProfileServiceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in emptypb.Empty
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationProfileServiceGetLinkedAccounts)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.GetLinkedAccounts(ctx, req.(*emptypb.Empty))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*LinkedAccountsResponse)
+		return ctx.Result(200, reply)
+	}
+}
+
 type ProfileServiceHTTPClient interface {
+	CompleteOnboarding(ctx context.Context, req *CompleteOnboardingRequest, opts ...http.CallOption) (rsp *User, err error)
+	GetLinkedAccounts(ctx context.Context, req *emptypb.Empty, opts ...http.CallOption) (rsp *LinkedAccountsResponse, err error)
 	GetProfile(ctx context.Context, req *emptypb.Empty, opts ...http.CallOption) (rsp *User, err error)
+	GetProfileByUsername(ctx context.Context, req *GetProfileByUsernameRequest, opts ...http.CallOption) (rsp *User, err error)
 	GetStats(ctx context.Context, req *emptypb.Empty, opts ...http.CallOption) (rsp *Stats, err error)
 	ListAchievements(ctx context.Context, req *emptypb.Empty, opts ...http.CallOption) (rsp *AchievementList, err error)
 	UpdateProfile(ctx context.Context, req *UpdateProfileRequest, opts ...http.CallOption) (rsp *User, err error)
@@ -129,6 +201,39 @@ func NewProfileServiceHTTPClient(client *http.Client) ProfileServiceHTTPClient {
 	return &ProfileServiceHTTPClientImpl{client}
 }
 
+func (c *ProfileServiceHTTPClientImpl) CompleteOnboarding(ctx context.Context, in *CompleteOnboardingRequest, opts ...http.CallOption) (*User, error) {
+	var out User
+	pattern := "/v1/onboarding/complete"
+	path := http.BuildPath(pattern, in)
+	opts = append([]http.CallOption{
+		http.Accept("application/protojson"),
+		http.ContentType("application/protojson"),
+		http.Operation(OperationProfileServiceCompleteOnboarding),
+		http.PathTemplate(pattern),
+	}, opts...)
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+func (c *ProfileServiceHTTPClientImpl) GetLinkedAccounts(ctx context.Context, in *emptypb.Empty, opts ...http.CallOption) (*LinkedAccountsResponse, error) {
+	var out LinkedAccountsResponse
+	pattern := "/v1/profile/linked-accounts"
+	path := http.BuildPath(pattern, in, http.WithQueryParams())
+	opts = append([]http.CallOption{
+		http.Accept("application/protojson"),
+		http.Operation(OperationProfileServiceGetLinkedAccounts),
+		http.PathTemplate(pattern),
+	}, opts...)
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
 func (c *ProfileServiceHTTPClientImpl) GetProfile(ctx context.Context, in *emptypb.Empty, opts ...http.CallOption) (*User, error) {
 	var out User
 	pattern := "/v1/profile"
@@ -136,6 +241,22 @@ func (c *ProfileServiceHTTPClientImpl) GetProfile(ctx context.Context, in *empty
 	opts = append([]http.CallOption{
 		http.Accept("application/protojson"),
 		http.Operation(OperationProfileServiceGetProfile),
+		http.PathTemplate(pattern),
+	}, opts...)
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+func (c *ProfileServiceHTTPClientImpl) GetProfileByUsername(ctx context.Context, in *GetProfileByUsernameRequest, opts ...http.CallOption) (*User, error) {
+	var out User
+	pattern := "/v1/profile/{username}"
+	path := http.BuildPath(pattern, in, http.WithQueryParams())
+	opts = append([]http.CallOption{
+		http.Accept("application/protojson"),
+		http.Operation(OperationProfileServiceGetProfileByUsername),
 		http.PathTemplate(pattern),
 	}, opts...)
 	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
